Fixed CSS styling so that the content has a maximum width of 750px instead of a static width of 650px. This allows the text to wrap when the window is too small.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -10,7 +10,8 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
-    width: 650px;
+    max-width: 750px;
+    width: auto;
     align-content: center;
     color: #FEEFDD;
 }
@@ -40,7 +41,7 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width:100%;
+    width: 100%;
     height: auto;
     background-color: #FF4000;
     position: fixed;
